next release
- Use Kafka client v2.5.0