@@ -14,4 +14,5 @@
 
 quarkus.log.level=${KAFKAPROXY_LOG_LEVEL:INFO}
 quarkus.log.console.json=${KAFKAPROXY_ENABLE_JSON_LOGGING:false}
+quarkus.http.host=${KAFKAPROXY_BIND_ADDRESS:0.0.0.0}
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) [%X{CHANNEL_ID}] %s%e%n
