@@ -1,2 +1,3 @@
 next release
 - Use Kafka client v2.5.0
+- Allow customization of bind address
